# pybase64

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Brewfile  LICENSE  MANIFEST.in  README.rst  SECURITY.md  appveyor.yml  conftest.py  noxfile.py  pyproject.toml  requirements-benchmark.txt  requirements-cibuildwheel.txt  requirements-coverage.txt  requirements-dev.txt  requirements-doc.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/actions/setup-uv-nox/: action.yml
.github/workflows/: benchmark.yml  build-upload.yml  coverage.yml  gcovr-matcher.json  lint.yml  msys2.yml  pre-commit-autoupdate.yml  pre-commit.yml  sanitizers.yml  test.yml  valgrind.yml
.history/mayhem/: Dockerfile_20230425203750  Dockerfile_20230425204502  Dockerfile_20230425210157  Dockerfile_20230425210158  Dockerfile_20230425214029  Dockerfile_20230425214434  Dockerfile_20230425214506  Dockerfile_20230425214526  Dockerfile_20230425215206  Dockerfile_20230425215244  Dockerfile_20230425215247  Dockerfile_20230426153052  Dockerfile_20230427161259  Dockerfile_20230427161302  Mayhemfile_20230425200608  Mayhemfile_20230425205845  Mayhemfile_20230425210117  Mayhemfile_20230425210124  Mayhemfile_20230425210438  Mayhemfile_20230425210440  Mayhemfile_20230425211028  Mayhemfile_20230427161239  Mayhemfile_20230427161241  Mayhemfile_20230427161245  Mayhemfile_20230427161247  Mayhemfile_20230427161249  Mayhemfile_20230429123722  Mayhemfile_20230429130046  Mayhemfile_20230429130918  fuzz_pybase64_20230425080030.py  fuzz_pybase64_20230429161949.py
benchmark/: benchmark.py
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  intro.rst  license.rst
mayhem/: Dockerfile  Mayhemfile  fuzz_pybase64.py  setup.py
pybase64/: __init__.py  __main__.py  _fallback.py  _pybase64.c  _pybase64_get_simd_flags.c  _pybase64_get_simd_flags.h
pybase64/_pybase64/: _pybase64.c
pybase64/distutils/: __init__.py  ccompilercapabilities.py
pybase64/tests/: test_main.py  test_pybase64.py  test_pybase64_unittest.py
requirements/: requirements-benchmark.txt  requirements-coverage.txt  requirements-docs.txt  requirements-lint.txt  requirements-setuptools.txt  requirements-test.txt
requirements/benchmark/: requirements-ci.txt
requirements/build-system/: requirements-ci.txt
requirements/coverage/: requirements-ci.txt
requirements/docs/: requirements-ci.txt
requirements/lint/: requirements-ci.txt
requirements/test/: requirements-ci.txt
src/pybase64/: __init__.py  __main__.py  _fallback.py  _pybase64.c  _pybase64.pyi  _pybase64_get_simd_flags.c  _pybase64_get_simd_flags.h  _typing.py  _unspecified.py  _version.py  _version.pyi
tests/: conftest.py  test_benchmark.py  test_main.py  test_packaging.py  test_pybase64.py  utils.py
tools/: embed_sbom.py
travis/: build-source-dist.sh  build-wheels-docker.sh  build-wheels-macos.sh  install-python-macos.sh
