[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest==8.3.5 ; python_version == '3.8'",
    "pytest==8.4.2 ; python_version == '3.9'",
    "pytest==9.0.2 ; python_version >= '3.10'",
    "pytest-run-parallel==0.8.1 ; python_version >= '3.13'",
    "typing_extensions>=4.6.0",
]
benchmark = [
    {include-group = "test"},
    "pytest-codspeed==4.2.0",
]
coverage = [
    {include-group = "test"},
    "gcovr==8.4",
    "pytest-cov==7.0.0",
    "coverage==7.13.0",
]
docs = [
    "sphinx==8.2.3",
    "furo==2025.12.19",
]
dev = [
    {include-group = "coverage"},
    {include-group = "docs"},
    {include-group = "test"},
    "nox",
    "setuptools",
]

[tool.cibuildwheel]
build-frontend = "build[uv]"
build-verbosity = 1
enable = ["cpython-freethreading", "graalpy", "pypy", "pypy-eol"]
test-skip = ["gp3*-win_amd64"]  # https://github.com/oracle/graalpython/issues/490
test-groups = ["test"]
test-sources = ["conftest.py", "pyproject.toml", "tests"]
test-command = "python -m pytest"
xbuild-tools = ["cmake"]

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*"
environment = { AUDITWHEEL_PLAT="manylinux2014_${AUDITWHEEL_ARCH}" }

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_riscv64"
environment = { AUDITWHEEL_PLAT="manylinux_2_31_${AUDITWHEEL_ARCH}" }

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_{ppc64le,riscv64,s390x}"
build-frontend = "build"

[[tool.cibuildwheel.overrides]]
select = "*-ios*"
build-frontend = "build"

[tool.coverage.run]
branch = true
patch = ["subprocess"]
omit = [
  "src/pybase64/_typing.py",
  "tests/conftest.py",
  "tests/test_benchmark.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "class .*\\(Protocol\\):", "if TYPE_CHECKING:"]

[tool.mypy]
python_version = "3.8"
files = [
  "src/**/*.py",
  "test/**/*.py",
  "noxfile.py",
  "setup.py",
]
warn_unused_configs = true
show_error_codes = true

warn_redundant_casts = true
no_implicit_reexport = true
strict_equality = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = false

disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = true
warn_return_any = true

no_implicit_optional = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pybase64.__main__", "tests.test_pybase64", "tests.utils"]
disallow_any_explicit = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "-p", "no:legacypath"]
markers = ["benchmark"]

[tool.ruff]
target-version = "py38"
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
  "D104",  # TODO add doc
  "FBT001",
  "FBT002",
  "PLR",    # Design related pylint codes
]
lint.typing-modules = ["pybase64._typing"]

[tool.ruff.lint.per-file-ignores]
"src/pybase64/__main__.py" = ["C901", "D", "T201"]
"!src/**.py" = ["D"]
"setup.py" = ["TRY400"]  # TODO
"docs/**.py" = ["ANN", "DTZ011", "ERA001", "INP001", "PTH"]
"tests/**.py" = ["ANN401", "PERF", "S101", "SLF001"]
"noxfile.py" = ["FIX002", "S101", "TD"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Callable".msg = "Use collections.abc.Callable instead."
"typing.Iterator".msg = "Use collections.abc.Iterator instead."
"typing.Sequence".msg = "Use collections.abc.Sequence instead."
